<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="video_uv_reversed"
        android:summary="@string/pref_description_video_uv_reversed"
        android:title="@string/pref_title_video_uv_reversed"/>

    <!--<SwitchPreference-->
    <!--android:defaultValue="true"-->
    <!--android:key="software_echo_cancel"-->
    <!--android:summary="@string/pref_description_software_echo_cancel"-->
    <!--android:title="@string/pref_title_software_echo_cancel"/>-->

    <SwitchPreference
        android:defaultValue="false"
        android:key="udp_enabled"
        android:summary="@string/pref_description_udp_enabled"
        android:title="@string/pref_title_udp_enabled"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="orbot_enabled"
        android:summary="@string/pref_description_orbot_enabled"
        android:title="@string/pref_title_orbot_enabled"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_higher_video_quality_titles"
        android:entryValues="@array/pref_higher_video_quality_values"
        android:key="higher_video_quality"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_description_higher_video_quality"
        android:title="@string/pref_title_higher_video_quality"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="fps_half"
        android:summary="@string/pref_description_fps_half"
        android:title="@string/pref_title_fps_half"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_higher_audio_quality_titles"
        android:entryValues="@array/pref_higher_audio_quality_values"
        android:key="higher_audio_quality"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_description_higher_audio_quality"
        android:title="@string/pref_title_higher_audio_quality"/>
    <ListPreference
        android:defaultValue="48000"
        android:entries="@array/pref_min_audio_samplingrate_out_titles"
        android:entryValues="@array/pref_min_audio_samplingrate_out_values"
        android:key="min_audio_samplingrate_out"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_description_min_audio_samplingrate_out"
        android:title="@string/pref_title_min_audio_samplingrate_out"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="conference_show_system_messages"
        android:summary="@string/pref_description_conference_show_system_messages"
        android:title="@string/pref_title_conference_show_system_messages"/>

    <!--<PreferenceCategory-->
    <!--android:title="! eXperimental !">-->

    <!--<SwitchPreference-->
    <!--android:defaultValue="false"-->
    <!--android:key="X_battery_saving_mode"-->
    <!--android:summary="@string/pref_description_X_battery_saving_mode"-->
    <!--android:title="@string/pref_title_X_battery_saving_mode"/>-->

    <!--</PreferenceCategory>-->
</PreferenceScreen>
