<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_addfriend"
        android:title="@string/layout___add_friend"
        android:icon="@drawable/baseline_person_add_alt_1_24"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_create_group_private"
        android:title="@string/layout___create_new_private_group"
        android:visible="true"
        android:icon="@drawable/emoji_google_category_smileysandpeople"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_create_group_public"
        android:title="@string/layout___create_new_public_group"
        android:visible="true"
        android:icon="@drawable/emoji_google_category_smileysandpeople"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_join_group_public"
        android:title="@string/layout___join_public_group"
        android:visible="true"
        android:icon="@drawable/emoji_google_category_smileysandpeople"
        app:showAsAction="never" />

</menu>