<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.zoffcc.applications.trifa.SetPasswordActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/web_hi_res_512"/>

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:text="@string/layout___set_password_or_skip"
                android:textColor="@color/md_grey_900"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/layout___password"
                    android:imeOptions="flagNoPersonalizedLearning"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/layout___password_again"
                    android:imeActionId="@+id/set_button"
                    android:imeOptions="flagNoPersonalizedLearning"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="25"
                    android:text="@string/layout___set_password"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/skip_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="3"
                    android:text="@string/layout___skip"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
