<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/join_group_inputlayout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/group_join_group_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/layout___group_id"
                        android:imeOptions="flagNoPersonalizedLearning"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingTop="12dp"
                android:text="@string/join_public_group_activity_help"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingTop="12dp"
                android:text="@string/join_public_group_activity_warning"
                android:textColor="@color/md_black_1000"
                android:textSize="25sp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel_clicked"
            android:textColor="@color/md_black_1000"
            android:text="@string/cancel"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="#1f000000"/>

        <Button
            android:id="@+id/friend_joingroup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="join_group_public_clicked"
            android:textColor="@color/md_black_1000"
            android:text="@string/join_group_activity_join"/>
    </LinearLayout>


</LinearLayout>